# rage

./: Cargo.toml
age/: Cargo.toml
age-plugin/: Cargo.toml
age-plugin/examples/: age-plugin-unencrypted.rs
age-plugin/src/: connection.rs  format.rs  lib.rs
age/src/: cli_common.rs  error.rs  format.rs  keys.rs  lib.rs  plugin.rs  primitives.rs  protocol.rs
age/src/format/: piv.rs  plugin.rs
age/src/format/piv/: yubikey.rs
age/src/primitives/: p256.rs
age/src/protocol/: decryptor.rs
rage/: Cargo.toml
rage/examples/: generate-docs.rs
