[package]
name = "age-plugin"
description = "[BETA] API for writing age plugins."
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
age-core = { version = "0.4.0", path = "../age-core" }
base64 = "0.11"
bech32 = "0.7"
cookie-factory = "0.3.1"
nom = "5"
secrecy = "0.6"
